# StickfigureAnimator

./: .gitignore  main.c  meson.build
resources/shaders/: colorpicker.frag  huepicker.frag  postprocess.frag  stick.frag  stick.vert
src/: arena.h  array.h  commands.c  commands.h  hand.c  hand.h  interface.c  interface.h  main-raylib.c  main-sdl3.c  meson.build  pivot.c  pivot.h  pivot_impl.h  ring.h
src/components/: ColorPicker.c  ColorPicker.h  DropdownMenu.c  IconButton.c  MenubarButton.c  ShaderImage.c  callback.c  callback.h  canvas.c  components.h  dropdownmenu.c  icon-button.c  menubar_button.c  utils.h
src/renderer/: renderer.c  renderer.h  stickfigure-renderer.c
subprojects/: cutils.wrap  raylib.wrap
